# PageRank

./: .gitignore  Dockerfile  README.md  Taskfile.yml  pyproject.toml  requirements.txt
src/: app.py  main.py
